first version of music player
сейчас может: открыть песню, изменять громкость 
листать и выбирать, перематывать, 
.....
ехххх пожрать бы

--- a/build-Vass_2-Desktop_Qt_5_12_3_MinGW_64_bit-Debug/Vass_2_resource.rc
+++ b/build-Vass_2-Desktop_Qt_5_12_3_MinGW_64_bit-Debug/Vass_2_resource.rc
@@ -1,6 +1,6 @@
 #include <windows.h>
 
-IDI_ICON1	ICON	DISCARDABLE	"D:\\Vass 2\\Vass-2\\Vass_2\\icon2.ico"
+IDI_ICON1	ICON	DISCARDABLE	"D:\\Vass 2\\Vass-2\\Vass_2\\icon2.png"
 
 VS_VERSION_INFO VERSIONINFO
 	FILEVERSION 0,0,0,0
